# shadowbox

./: .gitignore  CMakeLists.txt  README.md  format.sh
cmake/: FindOpenGLES3.cmake  FindSDL2_gpu.cmake  Findlibftdi.cmake
src/: BasicHighlight.cpp  BasicHighlight.hpp  BasicShadow.cpp  BasicShadow.hpp  BasicTracer.cpp  BasicTracer.hpp  CMakeLists.txt  Cartoon.cpp  Cartoon.hpp  DisplayImage.cpp  Effect.cpp  Effect.hpp  EmptyDetector.cpp  EmptyDetector.hpp  FlickerShadow.cpp  FlickerShadow.hpp  HighlightEdge.cpp  HighlightEdge.hpp  Projector.cpp  Projector.hpp  RgbSplit.cpp  RgbSplit.hpp  RgbUtil.cpp  RgbUtil.hpp  RollingShutter.cpp  RollingShutter.hpp  Screen.cpp  Screen.hpp  SimpleStrobe.cpp  SimpleStrobe.hpp  ThickHighlightEdge.cpp  ThickHighlightEdge.hpp
src/fadecandy/: CMakeLists.txt
src/rendering/: CMakeLists.txt  Renderer.cpp  Renderer.hpp
test/: CMakeLists.txt  empty_detector_test.cpp  fps_test.cpp
test/assets/: hand1.avi
